[package]
name = "robot36-encoder"
version = "0.2.1"
authors = ["killertux <bruno.canguru@hotmail.com>"]
readme = "readme.md"
repository = "https://github.com/killertux/robot36-encoder"
description = "Library to convert images into audio using the robot 36 encoding"
keywords = ["robot36", "sstv"]
categories = ["encoding", "multimedia"]
license = "MIT"
edition = "2021"

[dependencies]
num-complex = "0.4.2"
image = { version = "0.24", optional = true }
thiserror = "1"

[dev-dependencies]
hound = "3.4.0"
image = "0.24"

[[example]]
name = "encode-cli"
required-features = ["image"]

